# InfraTest

./: .gitignore  README.md  foundation.md  infra-test.yaml  pyproject.toml
artifacts/: aws-findings.md  aws-readonly-report.json
artifacts/local-smoke/: report.json
docs/: AWS_CHEATDOC.md  AntiGoals.md  COMMAND_RUNBOOK.md  MARKET_POSITIONING_WORKING_DOC.md  SYSTEM_ARCHITECTURE_V1.md  httpstest.md  mvp_strategy.md  tech_stack.md  vision.md
examples/: aws-account-readonly-checks.yaml  aws-iam-smoke.yaml  local-smoke.yaml
scripts/: manual_smoke_server.py
src/infratest/: __init__.py  cli.py  config.py  engine.py  exceptions.py  models.py  reporting.py  results.py
src/infratest/validators/: __init__.py  aws_iam_validator.py  http_validator.py  tcp_validator.py
tests/: test_aws_iam_validator.py  test_cli.py  test_config.py  test_http_validator.py  test_tcp_validator.py
