[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "infratest"
version = "0.1.0"
description = "Post-deployment infrastructure verification CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "InfraTest" }
]
dependencies = [
  "typer>=0.16.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "boto3>=1.35.0,<2.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "rich>=13.7.0,<14.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[project.scripts]
infratest = "infratest.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
